--- a/doc/人脸识别组件.md
+++ b/doc/人脸识别组件.md
@@ -59,6 +59,8 @@ export default {
 }
 ```
 + <strong>演示效果：</strong>
+
+<!DOCTYPE html>
 <html>
   <head>
     <style scoped>
@@ -90,5 +92,7 @@ export default {
     </div>
   </body>
 </html>
+
+
 ## 移动端
 > 待补充
