--- a/doc/人脸识别组件.md
+++ b/doc/人脸识别组件.md
@@ -63,7 +63,7 @@ export default {
 <!DOCTYPE html>
 <html>
   <head>
-    <style scoped>
+    <style>
       .img-content {
         width: 100%;
         overflow: hidden;
