--- a/doc/人脸识别组件.md
+++ b/doc/人脸识别组件.md
@@ -92,7 +92,7 @@ export default {
     </div>
   </body>
 </html>
-
+![人脸识别演示图](https://github.com/labor-rice/tools/edit/main/doc/%E4%BA%BA%E8%84%B8%E8%AF%86%E5%88%AB%E7%BB%84%E4%BB%B6.md)
 
 ## 移动端
 > 待补充
