--- a/doc/人脸识别组件.md
+++ b/doc/人脸识别组件.md
@@ -59,38 +59,7 @@ export default {
 }
 ```
 + <strong>演示效果：</strong>
+<img src="../static/img/unit-veriface-demo.gif" alt="demo"/>
 
-<!DOCTYPE html>
-<html>
-  <head>
-    <style>
-      .img-content {
-        width: 100%;
-        overflow: hidden;
-        position: relative;
-      }
-      .img-content .list-demo-img {
-        width: 100%; 
-        height: auto; 
-        margin-top: 5px; 
-        max-width: unset;
-      }
-      .img-content::before {
-        content: "";
-        position: absolute;
-        right: 16px;
-        top: 6px;
-        width: 130px;
-        height: 50px;
-        background: #fff;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="img-content">
-      <img class="list-demo-img" src="../static/img/unit-veriface-demo.gif" alt="demo"/>
-    </div>
-  </body>
-</html>
 ## 移动端
 > 待补充
